css/style.css
/* ... */
.element-show .step-content {
    animation-delay: 1.25s;
    animation-duration: 0.25s;
    animation-iteration-count: 1;
    animation-fill-mode: both;
    animation-timing-function: linear;
    animation-name: step;
}

@keyframes step {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.model {
    z-index: 5;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center !important;
}




@keyframes spin {
    0% {
        transform: rotateX(90deg) rotateZ(90deg);
    }

    25% {
        transform: rotateX(90deg) rotateZ(180deg)
    }

    50% {
        transform: rotateX(90deg) rotateZ(270deg)
    }

    75% {
        transform: rotateX(90deg) rotateZ(360deg)
    }

    100% {
        transform: rotateX(90deg) rotateZ(90deg)
    }
}



@media (max-width: 669px) {
    h1 {
        margin: 0;
        font-size: 30vw;
    }

    .wix-img {
        translate: none;
        width: 100%;
    }

    .candle-section-head {
        z-index: 1;
        width: 100%;
        top: 0vh;
    }

    .model {
        width: 100%;
        z-index: 2;
    }

    header {
        height: 120vh;
    }


    .modal span {
        white-space: normal;
    }

    header>div {
        z-index: 6;
    }


    .candle-section-head.animated {
        animation-name: candleUPMOBILE;
    }

    .candle-section-head {
        z-index: 3;
        animation-name: candleBACKMOBILE;
    }

    .candle-section-head .candle-text {
        z-index: 3;
        bottom: none;
        top: 0vh;
    }


    @keyframes candleUPMOBILE {
        0% {
            transform: translateY(100vh) scale(0.7);
        }

        100% {
            transform: translateY(-75vh) scale(1);

        }
    }


    @keyframes candleBACKMOBILE {
        0% {
            transform: translateY(-50vh) scale(1);
        }

        100% {
            transform: translateY(100vh) scale(0.7);
        }
    }

    .candle-section.static {
        flex-direction: column-reverse;
        flex-wrap: nowrap;
        justify-content: center;
    }

    .candle-section.static .wix-img {
        translate: none;
    }

    .candle-section.static .detail-description {
        max-width: 80%;
        text-align: center;
    }

    .candle-section.static .detail-description.animated {
        animation-name: detailAnimationMOBILE;
    }

    .candle-section.static .detail-description.shown {
        height: 60%;
        animation-name: detailOpacity
    }

    @keyframes detailAnimationMOBILE {
        from {
            height: 0%;
        }

        to {
            height: 60%;
        }
    }

    @keyframes detailOpacity {
        from {
            opacity: 0;
        }

        to {
            opacity: 1;
        }
    }

    .phone-section {
        padding: 15px;
    }

    .phone-section h3{
        margin: 15px;
    }

    .phone-section .section-header {
        text-align: center;
    }

    .phone-section .section-content {
        text-align: center;
        flex-direction: column-reverse;
        padding: 0;
        justify-content: center;
    }

    .phone-section .content {
        width: 90%;
        text-align: center;
    }

    .phone-section .phone {
        width: 100%;
    }

    .phone-screen .statusbar,
    .statusbar #clock,
    .phone-screen .notifications {
        font-size: 3vw;
    }

    .tools-bar {
        font-size: 6vw;
    }

    .phone-screen .progress-bar #time-left {
        font-size: 2.5vw;
    }

    .phone-screen .glow-outer.active {
        animation-name: glow;
        animation-duration: 2s;
        box-shadow: 10px -5vh 400px 20em rgba(255, 192, 46, 0.75);

    }

    @keyframes glow {
        from {
            box-shadow: 10px -5vh 400px 0em rgba(255, 192, 46, 0.75);
        }

        to {
            box-shadow: 10px -5vh 400px 20em rgba(255, 192, 46, 0.75);

        }
    }


    .continue-section {
        text-align: center;
        margin: 0;
        padding: 15px;
        width: 100%;
    }

    .about .content {
        flex-direction: column;
        align-items: center;
    }

    .about .profile {
        max-width: 65%;
    }

    .moon-sun-span {
        height: 100vw;
        width: 100vh;
        animation: 30s linear infinite dayNight;
    }


    .day-night .candle-section.static .model {
        width: 50vh;
    }

    .day-night .candle-section {
        height: 50vh;
    }

    .day-night .text-content {
        font-size: 1.1em;
        width: 90%;
        z-index: 7;
    }

    .day-night .candle-section .wix-img {
        width: 100%;
    }

    .sun {
        top: 0;
    }

    .moon,
    .sun {
        width: 50px;
        height: 50px;
    }

    .moon .shadow {
        width: 30px;
        height: 30px;
    }

    .feedback .modal {
        width: 80%;
    }
}
/* ... */

